test/syntax/wrong/unused1.kk.out
test/syntax/wrong/unused1.kk(2, 5): error: invalid syntax
 unexpected 2
 expecting ".", "(", "[", "{", "fn", "fun", operator, ":=", ";", "return" or "}"